syntax = "proto3";

package Nebula.Services.Fragments.Inventory;
import "google/api/annotations.proto";

service StockInterface {
	rpc GetStockForProduct (GetStockForProductRequest) returns (GetStockForProductResponse) {
		option (google.api.http) = {
			get: "/api/v1/inventory/{OrganizationId}/products/{ProductId}/stock"
		};
	}
	rpc UpdateStock (UpdateStockRequest) returns (UpdateStockResponse) {
		option (google.api.http) = {
			put: "/api/v1/inventory/{OrganizationId}/products/{ProductId}/stock"
			body: "*"
		};
	}
}

message GetStockForProductRequest {
	string ProductId = 1;
	string LocationId = 2;
	string OrganizationId = 3;
}

message GetStockForProductResponse {
	string Error = 1;
}

message UpdateStockRequest {
  string ProductId = 1;
  string LocationId = 2;
  int32 NewQuantity = 3;
  string OrganizationId = 4;
}

message UpdateStockResponse {
  string Error = 1;
}